# HighPerfSoftwareCS

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
Task1/src/: main.cpp  mpi_hello_world.cpp  openmp_hello_world.cpp
src/: CMakeLists.txt
src/Task1/: CMakeLists.txt
src/Task1/CUDA/: CMakeLists.txt  cuda_hello_world.cu
src/Task1/MPI/: CMakeLists.txt  mpi_hello_world.cpp
src/Task1/OpenMP/: CMakeLists.txt  openmp_hello_world.cpp
src/Task2/: CMakeLists.txt  README.md
src/Task2/CUDA/: CMakeLists.txt  main.cu
src/Task2/MPI/: CMakeLists.txt  main.cpp
src/Task2/MPI/exec_thread/: exec_thread.cpp  exec_thread.hpp
src/Task2/OpenMP/: CMakeLists.txt  main.cpp
src/Task2/array_sum/: array_sum.cpp  array_sum.hpp
src/Task2/generate_array/: generate_array.cpp  generate_array.hpp
src/Task3/: README.md
src/Task3/CUDA/: CMakeLists.txt  main.cu
src/Task3/MPI/: CMakeLists.txt  main.cpp
src/Task3/OpenMP/: CMakeLists.txt  main.cpp
src/Task4/: README.md
src/Task4/OpenMP/: CMakeLists.txt  main.cpp
